--- a/crates/id-connectors/Cargo.toml
+++ b/crates/id-connectors/Cargo.toml
@@ -6,4 +6,8 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1"
-thiserror = "1"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+argon2 = "0.5"
+password-hash = "0.5"
+rand = "0.8"
