--- a/crates/policy-engine/Cargo.toml
+++ b/crates/policy-engine/Cargo.toml
@@ -6,6 +6,6 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1"
-thiserror = "1"
 serde = { version = "1", features = ["derive"] }
-serde_json = "1"
+toml = "0.8"
+chrono = { version = "0.4", features = ["clock"] }
