--- a/crates/radius-core/Cargo.toml
+++ b/crates/radius-core/Cargo.toml
@@ -6,6 +6,6 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1"
-thiserror = "1"
 tokio = { version = "1", features = ["rt-multi-thread","macros","net"] }
 tracing = "0.1"
+policy-engine = { path = "../policy-engine" }
