--- a/crates/storage/Cargo.toml
+++ b/crates/storage/Cargo.toml
@@ -6,8 +6,8 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1"
-thiserror = "1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
 toml = "0.8"
+thiserror = "1"
+chrono = { version = "0.4", features = ["clock"] }
