--- a/crates/telemetry/Cargo.toml
+++ b/crates/telemetry/Cargo.toml
@@ -6,4 +6,4 @@ license = "MIT"
 
 [dependencies]
 tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["fmt","env-filter"] }
+tracing-subscriber = { version = "0.3", features = ["fmt","env-filter","json"] }
