--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -15,3 +15,11 @@ storage = { path = "../storage" }
 id-connectors = { path = "../id-connectors" }
 mfa-broker = { path = "../mfa-broker" }
 serde_json = "1"
+
+md5 = "0.7"
+
+rand = "0.8"
+
+md4 = "0.10"
+
+hex = "0.4"
