Fix opentelemetry SDK crate name

--- a/crates/telemetry/Cargo.toml
+++ b/crates/telemetry/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 [dependencies]
 opentelemetry = { version = "0.21", features = ["metrics"] }
 opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic","metrics"] }
-opentelemetry-sdk = { version = "0.21", features = ["metrics","rt-tokio"] }
+opentelemetry_sdk = { version = "0.21", features = ["metrics","rt-tokio"] }
 tracing = "0.1"
 tracing-opentelemetry = "0.22"
 tracing-subscriber = { version = "0.3", features = ["fmt","env-filter","json","registry"] }
